--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body class="">
 
-    <img src="/docs/dist/images/logo.svg" alt="Airhorny.com" id="logo" class="logo">
+    <img src="./dist/images/logo.svg" alt="Airhorny.com" id="logo" class="logo">
     <div id="button" class="button"></div>
     <div class="airhorns">
       <label for="airhorn--penis">
