--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
   	<meta charset="utf-8">
   	<meta http-equiv="x-ua-compatible" content="ie=edge">
-  	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   	<title>Airhorny</title>
     <meta name='robots' content='max-image-preview:large' />
     <link rel='dns-prefetch' href='//s.w.org' />
-    <link rel='stylesheet' id='app/css-css'  href='./dist/styles/app.css?id=aa704c7ce00d760c1bc9489ba343a6d2' type='text/css' media='all' />
+    <link rel='stylesheet' id='app/css-css'  href='./dist/styles/app.css' type='text/css' media='all' />
     <link rel="canonical" href="http://airhorny.test/" />
     <link rel='shortlink' href='http://airhorny.test/' />
 
